--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,52 @@
 {
     "routes": [
       {
-        "src": "/login",
-        "dest": "/"
+        "src": "/static/(.*)",           
+        "dest": "/static/$1"
       },
       {
-        "src": "/register",
-        "dest": "/"
+        "src": "/assets/(.*)",           
+        "dest": "/assets/$1"
       },
       {
-        "src": "/createRoom",
-        "dest": "/"
+        "src": "/(.*\\.js)",
+        "dest": "/$1"
+      },
+      {
+        "src": "/(.*\\.css)",
+        "dest": "/$1"
+      },
+      {
+        "src": "/(.*\\.ico)",
+        "dest": "/$1"
+      },
+      {
+        "src": "/(.*\\.png)",
+        "dest": "/$1"
       },
       {
         "src": "/editor/(?<roomId>[^/]+)",
-        "dest": "/"
+        "dest": "/index.html"
+      },
+      {
+        "src": "/login",
+        "dest": "/index.html"
+      },
+      {
+        "src": "/register",
+        "dest": "/index.html"
+      },
+      {
+        "src": "/createRoom",
+        "dest": "/index.html"
       },
       {
         "src": "/",
-        "dest": "/"
+        "dest": "/index.html"
       },
       {
         "src": "/.*",
-        "dest": "/"
+        "dest": "/index.html"
       }
     ]
   }
